name: spell
version: 0.1.0.0
synopsis: Spelling Corrector in Haskell
description:
  Haskell implementation of the simple spelling corrector "spell.py" by Peter
  Norvig, which is described in detail in his article "How to Write a Spelling
  Corrector": <http://norvig.com/spell-correct.html>
homepage: https://github.com/doersino/spell
license: MIT
license-file: LICENSE
author: Noah Doersing
maintainer: doersino@gmail.com
copyright: 2016 Noah Doersing
category: Language
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:
    Spell
  build-depends:
    base >=4.6 && <5,
    containers,
    split,
    list-extras,
    data-ordlist
  hs-source-dirs: src
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    base >=4.6 && <5,
    spell,
    hspec == 2.*
  default-language: Haskell2010
